--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 								<span class="icon-bar"></span>
 							</button>
 							<a class="navbar-brand" href="index.html">
-								<img  src="education.png" alt="logo">
+								<img  src="education.png" alt="loggggo">
 							</a>
 						</div><!--/.navbar-header -->
 
