--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 									<p>
 										Thanks you for visiting our website . If you want any of the freelancing services then you can email us at educationrevolution07@gmail.com
 										<br>
-										Also don't forget to donate us at UPI ID : satya8126yadav@okaxis
+										Also if you want to make us grow and help us in providing such free of cost content then donate us by mailing Donate <name> on the provided email we will send you the donation details .
 									</p>
 								</div><!--/.hm-foot-para-->
 								<div class="hm-foot-icon">
